Fix: Team page overflow issue in mobile view

--- a/src/Pages/Team/TeamPage.styles.css
+++ b/src/Pages/Team/TeamPage.styles.css
@@ -118,7 +118,6 @@
 
 @media(max-width: 992px) {
     .offspace {
-        position: relative;
         top: 75px;
     }
 
